生成できなかったAPIの一部を生成できるように

--- a/api-client-config.yaml
+++ b/api-client-config.yaml
@@ -1,2 +1,6 @@
 project_name_override: aiotraq
 package_name_override: aiotraq
+content_type_overrides:
+  image/jpeg: application/octet-stream
+  image/png: application/octet-stream
+  image/gif: application/octet-stream
