--- a/libs/aiotraq/pyproject.toml
+++ b/libs/aiotraq/pyproject.toml
@@ -4,10 +4,8 @@ version = "0.1.0"
 description = "Async ready traQ API Client"
 authors = []
 readme = "README.md"
-packages = [
-    {include = "aiotraq"},
-]
-include = ["CHANGELOG.md", "aiotraq/py.typed"]
+packages = [{ include = "aiotraq" }]
+include = ["aiotraq/py.typed"]
 repository = "https://github.com/toshi-pono/aiotraq"
 
 
@@ -25,8 +23,24 @@ python-dateutil = "^2.8.0"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.ruff]
-line-length = 120
+[tool.mypy]
+show_error_context = true
+show_column_numbers = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+check_untyped_defs = true
 
-[tool.ruff.lint]
-select = ["F", "I", "UP"]
+
+[tool.ruff]
+exclude = [".venv", "venv", "__pycache__", ".git"]
+
+line-length = 120
+indent-width = 4
+
+[tool.ruff.format]
+quote-style = "double"
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
