--- a/libs/bot/pyproject.toml
+++ b/libs/bot/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["toshi00"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/toshi-pono/aiotraq"
+packages = [{ include = "aiotraq_bot" }]
+include = ["aiotraq_bot/py.typed"]
 
 
 [tool.poetry.urls]
@@ -14,8 +16,32 @@ repository = "https://github.com/toshi-pono/aiotraq"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
+fastapi = ">=0.100.0"
+uvicorn = { extras = ["standard"], version = ">=0.12.0" }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.mypy]
+show_error_context = true
+show_column_numbers = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+check_untyped_defs = true
+
+
+[tool.ruff]
+exclude = [".venv", "venv", "__pycache__", ".git"]
+
+line-length = 120
+indent-width = 4
+
+[tool.ruff.format]
+quote-style = "double"
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
