--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,30 @@ openapi-python-client = "^0.19.1"
 
 
 [tool.poetry.group.dev.dependencies]
-aiotraq = {path = "libs/aiotraq", develop = true}
+aiotraq = { path = "libs/aiotraq", develop = true }
 python-dotenv = "^1.0.1"
+aiotraq-bot = { path = "libs/bot", develop = true }
+ruff = ">=0.2,<0.4"
+mypy = "^1.10.0"
 
+[tool.mypy]
+show_error_context = true
+show_column_numbers = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+check_untyped_defs = true
+
+
+[tool.ruff]
+exclude = [".venv", "venv", "__pycache__", ".git"]
+
+line-length = 120
+indent-width = 4
+
+[tool.ruff.format]
+quote-style = "double"
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
