--- a/libs/aiotraq/pyproject.toml
+++ b/libs/aiotraq/pyproject.toml
@@ -18,19 +18,11 @@ python = "^3.8"
 httpx = ">=0.20.0,<0.28.0"
 attrs = ">=21.3.0"
 python-dateutil = "^2.8.0"
+types-python-dateutil = "^2.9.0.20240316"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.mypy]
-show_error_context = true
-show_column_numbers = true
-ignore_missing_imports = true
-disallow_untyped_defs = true
-no_implicit_optional = true
-warn_return_any = true
-check_untyped_defs = true
 
 
 [tool.ruff]
