--- a/libs/aiotraq/pyproject.toml
+++ b/libs/aiotraq/pyproject.toml
@@ -2,11 +2,13 @@
 name = "aiotraq"
 version = "0.1.0"
 description = "Async ready traQ API Client"
-authors = []
+authors = ["toshi00"]
+license = "MIT"
 readme = "README.md"
 packages = [{ include = "aiotraq" }]
 include = ["aiotraq/py.typed"]
 repository = "https://github.com/toshi-pono/aiotraq"
+keywords = ["traQ", "API", "async", "httpx"]
 
 
 [tool.poetry.urls]
@@ -14,11 +16,13 @@ repository = "https://github.com/toshi-pono/aiotraq"
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<4.0"
 httpx = ">=0.20.0,<0.28.0"
 attrs = ">=21.3.0"
 python-dateutil = "^2.8.0"
-types-python-dateutil = "^2.9.0.20240316"
+
+[tool.poetry.group.dev.dependencies]
+types-python-dateutil = "^2.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
