--- a/libs/bot/pyproject.toml
+++ b/libs/bot/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 repository = "https://github.com/toshi-pono/aiotraq"
 packages = [{ include = "aiotraq_bot" }]
 include = ["aiotraq_bot/py.typed"]
+keywords = ["traQ", "bot", "async", "aiotraq"]
 
 
 [tool.poetry.urls]
@@ -15,7 +16,7 @@ include = ["aiotraq_bot/py.typed"]
 
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<4.0"
 fastapi = ">=0.100.0"
 uvicorn = { extras = ["standard"], version = ">=0.12.0" }
 
