--- a/libs/aiotraq/pyproject.toml
+++ b/libs/aiotraq/pyproject.toml
@@ -23,10 +23,21 @@ python-dateutil = "^2.8.0"
 
 [tool.poetry.group.dev.dependencies]
 types-python-dateutil = "^2.8.0"
+mypy = "^1.10.0"
+ruff = "^0.4.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+show_error_context = true
+show_column_numbers = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = false
+check_untyped_defs = true
 
 
 [tool.ruff]
