--- a/libs/bot/pyproject.toml
+++ b/libs/bot/pyproject.toml
@@ -20,6 +20,10 @@ python = ">=3.10,<4.0"
 fastapi = ">=0.100.0"
 uvicorn = { extras = ["standard"], version = ">=0.12.0" }
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.10.0"
+ruff = "^0.4.7"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
