--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ disallow_untyped_defs = true
 no_implicit_optional = true
 warn_return_any = true
 check_untyped_defs = true
+exclude = "libs/*"
 
 
 [tool.ruff]
