--- a/.github/actions/poetry_setup/action.yml
+++ b/.github/actions/poetry_setup/action.yml
@@ -70,6 +70,13 @@ runs:
         PYTHON_VERSION: ${{ inputs.python-version }}
       run: pipx install "poetry==$POETRY_VERSION" --python '${{ steps.setup-python.outputs.python-path }}' --verbose
 
+    - name: Enshre Pipx Paths
+      shell: bash
+      run: |
+        pipx ensurepath
+        pipx list
+        poetry --version
+
     - name: Restore pip and poetry cached dependencies
       uses: actions/cache@v4
       env:
