--- a/.github/actions/poetry_setup/action.yml
+++ b/.github/actions/poetry_setup/action.yml
@@ -47,20 +47,20 @@ runs:
       run: |
         hash -r
 
-        # 以下必要そうだったらコメントアウトを外す
-        # # `actions/cache@v3` doesn't always seem able to correctly unpack softlinks.
-        # # Delete and recreate the softlinks pipx expects to have.
-        # rm /opt/pipx/venvs/poetry/bin/python
-        # cd /opt/pipx/venvs/poetry/bin
-        # ln -s "$(which "python$PYTHON_VERSION")" python
-        # chmod +x python
-        # cd /opt/pipx_bin/
-        # ln -s /opt/pipx/venvs/poetry/bin/poetry poetry
-        # chmod +x poetry
+        # `actions/cache@v3` doesn't always seem able to correctly unpack softlinks.
+        # Delete and recreate the softlinks pipx expects to have.
+        rm /opt/pipx/venvs/poetry/bin/python
+        cd /opt/pipx/venvs/poetry/bin
+        ln -s "$(which "python$PYTHON_VERSION")" python
+        chmod +x python
+        cd /opt/pipx_bin/
+        ln -s /opt/pipx/venvs/poetry/bin/poetry poetry
+        chmod +x poetry
 
         # Ensure everything got set up correctly.
         /opt/pipx/venvs/poetry/bin/python --version
-        /opt/pipx/venvs/poetry/bin/poetry --version
+        /opt/pipx_bin/poetry --version
+        pipx list
 
     - name: Install Poetry
       if: steps.cache-bin-poetry.outputs.cache-hit != 'true'
@@ -69,13 +69,6 @@ runs:
         POETRY_VERSION: ${{ inputs.poetry-version }}
         PYTHON_VERSION: ${{ inputs.python-version }}
       run: pipx install "poetry==$POETRY_VERSION" --python '${{ steps.setup-python.outputs.python-path }}' --verbose
-
-    - name: Enshre Pipx Paths
-      shell: bash
-      run: |
-        pipx ensurepath
-        pipx list
-        poetry --version
 
     - name: Restore pip and poetry cached dependencies
       uses: actions/cache@v4
