--- a/libs/message/pyproject.toml
+++ b/libs/message/pyproject.toml
@@ -20,6 +20,7 @@ python = ">=3.10,<4.0"
 aiotraq = "^0.1.2"
 aiotraq-bot = "^0.1.2"
 pillow = "^10.3.0"
+numpy = "^1.26.4"
 
 
 [tool.poetry.group.dev.dependencies]
