✨ dataframeを表示できるように

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ ruff = ">=0.2,<0.4"
 mypy = "^1.10.0"
 pillow = "^10.3.0"
 numpy = "^1.26.4"
+pandas = "^2.2.2"
 
 [tool.mypy]
 show_error_context = true
