--- a/libs/message/pyproject.toml
+++ b/libs/message/pyproject.toml
@@ -21,6 +21,8 @@ aiotraq = "^0.1.2"
 aiotraq-bot = "^0.1.2"
 pillow = "^10.3.0"
 numpy = "^1.26.4"
+pandas = "^2.2.2"
+tabulate = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
