--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,6 @@ on:
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
-defaults:
-  run:
-    working-directory: docs
-
 jobs:
   changes:
     runs-on: ubuntu-latest
@@ -42,13 +38,15 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: docs
       - name: Build website
         run: npm run build
+        working-directory: docs
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build
+          path: docs/build
 
   deploy:
     name: Deploy to GitHub Pages
