--- a/libs/aiotraq/pyproject.toml
+++ b/libs/aiotraq/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aiotraq"
-version = "0.1.2"
+version = "0.2.0"
 description = "Async ready traQ API Client"
 authors = ["toshi00"]
 license = "MIT"
@@ -13,7 +13,6 @@ keywords = ["traQ", "API", "async", "httpx"]
 
 [tool.poetry.urls]
 "Source Code" = "https://github.com/toshi-pono/aiotraq/tree/main/libs/aiotraq"
-
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
@@ -39,12 +38,12 @@ no_implicit_optional = true
 warn_return_any = false
 check_untyped_defs = true
 
-
 [tool.ruff]
 exclude = [".venv", "venv", "__pycache__", ".git"]
 
 line-length = 120
 indent-width = 4
+select = ["F", "I", "UP"]
 
 [tool.ruff.format]
 quote-style = "double"
