--- a/libs/message/pyproject.toml
+++ b/libs/message/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aiotraq-message"
-version = "0.2.4"
+version = "0.2.5"
 description = "aiotraq Plugin that supports interactive message sending using Streamlit-style syntax for traQ"
 authors = ["toshi00"]
 license = "MIT"
@@ -19,10 +19,10 @@ keywords = ["traQ", "bot", "message", "aiotraq"]
 python = ">=3.10,<4.0"
 aiotraq = ">=0.1.2,<0.3.0"
 aiotraq-bot = ">=0.1.2,<0.3.0"
-pillow = "^10.3.0"
-numpy = "^1.26.4"
-pandas = "^2.2.2"
-tabulate = "^0.9.0"
+pillow = ">=10.3.0"
+numpy = ">=1.26.4"
+pandas = ">=2.2.2"
+tabulate = ">=0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
