--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,12 +58,34 @@ jobs:
           echo version="$(poetry version --short)" >> $GITHUB_OUTPUT
   test-pypi-publish:
     needs: [build]
-    uses: ./.github/workflows/_test_release.yml
+    runs-on: ubuntu-latest
     permissions:
+      # This permission is used for trusted publishing:
+      # https://blog.pypi.org/posts/2023-04-20-introducing-trusted-publishers/
+      #
+      # Trusted publishing has to also be configured on PyPI for each package:
+      # https://docs.pypi.org/trusted-publishers/adding-a-publisher/
       id-token: write
-    with:
-      working-directory: ${{ inputs.working-directory }}
-    secrets: inherit
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: test-dist
+          path: ${{ inputs.working-directory }}/dist/
+
+      - name: Publish to test PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: ${{ inputs.working-directory }}/dist/
+          verbose: true
+          print-hash: true
+          repository-url: https://test.pypi.org/legacy/
+
+          # We overwrite any existing distributions with the same name and version.
+          # This is *only for CI use* and is *extremely dangerous* otherwise!
+          # https://github.com/pypa/gh-action-pypi-publish#tolerating-release-package-file-duplicates
+          skip-existing: true
   publish:
     needs: [build, test-pypi-publish]
     runs-on: ubuntu-latest
